--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+
+.columna{
+    border: 1px solid red;
+}
+
+.fila {
+    border: 1px solid blue;
+}
