se practico el uso de flex

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,10 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+
+.columna{
+    border: 1px solid red;
+}
+.row{
+    border: 1px solid gray;
+}
