--- a/css/app.css
+++ b/css/app.css
@@ -30,3 +30,10 @@ input.form-control:focus {
     padding-left: 1em;
     padding-right: 1em;
 }
+#carousel-productos {
+    background-color: #555555;
+}
+
+#carousel-productos img{
+    margin: 0 auto;
+}
