--- a/css/app.css
+++ b/css/app.css
@@ -31,6 +31,14 @@ input.form-control:focus {
     padding-left: 1em;
     padding-right: 1em;
 }
+.search-icon{
+    background-image:url('../images/search.svg') ;
+    background-repeat: no-repeat;
+    background-size: 20px 20px; 
+    text-align: right;
+    padding-left: 40px;
+    background-position: 10px 10px;
+}
 #carousel-productos {
     background-color: #555555;
 }
