--- a/css/app.css
+++ b/css/app.css
@@ -32,7 +32,7 @@ input.form-control:focus {
     padding-right: 1em;
 }
 .search-icon{
-    background-image:url('../images/search.svg') ;
+    background-image:url('../images/svg/search.svg') ;
     background-repeat: no-repeat;
     background-size: 20px 20px; 
     text-align: right;
